overflow correction

--- a/app/components/_animated-background.scss
+++ b/app/components/_animated-background.scss
@@ -7,6 +7,7 @@ $blob-color: hsl(200,100%,40%);
 
 #sf_bg-animation{
     margin: 0;
+    overflow: hidden;
 }
 .sf_bg-animated{
     position: relative;
