--- a/app/components/_perspectives.scss
+++ b/app/components/_perspectives.scss
@@ -1,4 +1,5 @@
 #perspectives{
+    overflow:hidden;
     div{
         perspective:1000px;
         perspective-origin: 50% -15%;
