--- a/app/components/_sprites-scroll.scss
+++ b/app/components/_sprites-scroll.scss
@@ -17,7 +17,7 @@
     }
     img{
         position: absolute;
-        animation: deco-scroll 60s infinite linear;
+        animation: deco-scroll 140s infinite linear;
     }
     :nth-child(1){
         overflow: hidden;
